--- a/lang/iquote-lang-ru.xml
+++ b/lang/iquote-lang-ru.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 
-<language name="Russian (RU)" vbversion="4.0.4" product="rcd_iquote" type="custom">
-    <settings>
-        <options><![CDATA[1]]></options>
-        <languagecode><![CDATA[ru]]></languagecode>
-        <charset><![CDATA[UTF-8]]></charset>
-        <imagesoverride />
-        <dateoverride><![CDATA[d.m.Y]]></dateoverride>
-        <timeoverride><![CDATA[H:i]]></timeoverride>
-        <registereddateoverride><![CDATA[d.m.Y]]></registereddateoverride>
-        <calformat1override><![CDATA[d.m.Y]]></calformat1override>
-        <calformat2override><![CDATA[d.m]]></calformat2override>
-        <logdateoverride><![CDATA[H:i, d.m.Y]]></logdateoverride>
-        <locale />
-        <decimalsep><![CDATA[.]]></decimalsep>
-        <thousandsep><![CDATA[,]]></thousandsep>
-    </settings>
-    <phrasetype name="Postbit" fieldname="postbit">
-        <phrase name="rcd_iquote_context_menu_quote" date="1280474725" username="admin"><![CDATA[Цитировать]]></phrase>
-    </phrasetype>
+<language name="Russian (RU)" vbversion="4.0.6" product="rcd_iquote" type="custom">
+	<settings>
+		<options><![CDATA[1]]></options>
+		<languagecode><![CDATA[ru]]></languagecode>
+		<charset><![CDATA[UTF-8]]></charset>
+		<imagesoverride />
+		<dateoverride><![CDATA[d.m.Y]]></dateoverride>
+		<timeoverride><![CDATA[H:i]]></timeoverride>
+		<registereddateoverride><![CDATA[d.m.Y]]></registereddateoverride>
+		<calformat1override><![CDATA[d.m.Y]]></calformat1override>
+		<calformat2override><![CDATA[d.m]]></calformat2override>
+		<logdateoverride><![CDATA[H:i, d.m.Y]]></logdateoverride>
+		<locale />
+		<decimalsep><![CDATA[.]]></decimalsep>
+		<thousandsep><![CDATA[,]]></thousandsep>
+	</settings>
+	<phrasetype name="Postbit" fieldname="postbit">
+		<phrase name="rcd_iquote_context_menu_quote" date="1280474725" username="jpatuk"><![CDATA[Цитировать]]></phrase>
+		<phrase name="rcd_iquote_disable_quickreply" date="1288251487" username="jpatuk"><![CDATA[Выделите сначала мышкой текст, который хотите процитировать!\n\nЕсли нужно процитировать все целиком - нажмите OK для продолжения.]]></phrase>
+	</phrasetype>
 </language>
